# FILLY

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  fil.sh  filly  libartixforge.so.sig  libgforge.so.sig  spec.md
filly-bin/: Cargo.toml  main.c  relay.c
filly-bin/src/: main.rs  widget_template.rs
filly-core/: Cargo.toml  backend.h  event.h  relay.c  render.c  render.h  session.c  session.h  store.c  store.h  theme.c  theme.h  widget.c  widget.h
filly-core/src/: backend.rs  clipboard.rs  event.rs  headless.rs  layout.rs  lib.rs  plugin.rs  render.rs  session.rs  store.rs  theme.rs  widget.rs
filly-core/widgets/: badge.c  badge.h  calendar.c  calendar.h  checklist.c  checklist.h  disk.c  hub.c  (+56 more)
filly-daemon/: Cargo.toml  checkpoint.c  checkpoint.h  daemon.c  daemon.h  socket_backend.c  socket_backend.h  verify.c
filly-daemon/src/: daemon.rs  lib.rs
filly-graphical/: filly_graphical.sh  setup.py
filly-headless/: headless.c  headless.h
filly-protocol/: Cargo.toml  protocol.c  protocol.h  schema.c
filly-python/: setup.py
filly-script/: fil.c  fil.h
filly-terminal/: Cargo.toml  renderer.c  renderer.h  terminal.c  terminal.h
go-filly/: filly.go
node-filly/: index.js
src/: cJSON.c  cJSON.h  filly.h  stb_truetype.h  xdg-shell.c  xdg-shell.h
test/: harness.sh  harness_gui.sh  harness_tui.sh  pixel_test.c  snapshot.c  test.c  wayland_raw.c
themes/: catppuccin_mocha.json  dracula.json  forge.json  gruvbox_dark.json  monokai.json  nord.json  solarized_dark.json  tokyo_night.json
tools/: filly-key.pub  genkey.c  sign.c  verify.c
(+256 files in other folders)
