[package]
name = "filly-daemon"
version = "0.1.0"
edition = "2021"
description = "FILLY Unix socket daemon"

[dependencies]
filly-core = { path = "../filly-core" }
filly-protocol = { path = "../filly-protocol" }
filly-terminal = { path = "../filly-terminal" }
anyhow = "1"
serde_json = "1"
libc = "0.2"
rmp-serde = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }